--- a/AminWeb/Views/Shared/_LoggedInUser.cshtml
+++ b/AminWeb/Views/Shared/_LoggedInUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (User.Identity.IsAuthenticated)
 {
-    <a href="/User/Account/UserData" class="uk-margin-auto-right lesser">
-        پروفایل
+    <a href="/User/Account/UserData" uk-icon="icon:user;ratio:1.4" class="uk-margin-auto-right uk-margin-auto-top uk-height-1-1 lesser">
+
     </a>
     <div uk-drop id="navDrop">
         <div class="drop-body uk-padding-small column">
