--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -305,7 +305,8 @@ backdrop-filter: saturate(80%);
     margin-left: 20px; }
     .top-nav > nav a {
       margin: auto 0;
-      margin-right: 16px; }
+      margin-right: 16px;
+      white-space: nowrap; }
   .top-nav > .logo {
     width: 50px;
     margin-right: 24px; }
@@ -473,8 +474,8 @@ a:hover, summary:hover, .active {
 .video-grid {
   display: grid;
   grid-template-rows: auto;
-  grid-gap: 1em;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); }
+  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
   .video-grid > .video-block {
     margin-left: auto; }
 
