--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -11,16 +11,24 @@
     <link href="~/Content/Styles/Controls.min.css" rel="stylesheet" />
     <link href="~/Content/Styles/Global.min.css" rel="stylesheet" />
 
+    <!--PWA-->
+    <link rel="apple-touch-icon" sizes="192x192" href="/resources/png/Mobile/icon_192.png">
+    <meta name="msapplication-TileColor" content="#F94646">
+    <meta name="apple-mobile-web-app-status-bar" content="#F94646" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#F94646" />
+    <meta name="theme-color" content="#F94646" />
+    <link rel="manifest" href="~/manifest.json" />
+
     <!--UIKit-->
     <link href="~/Content/UIkit/uikit.min.css" rel="stylesheet" />
     <script src="~/Content/UIkit/uikit.min.js"></script>
     <script src="~/Content/UIkit/uikit-icons.min.js"></script>
 
-
     <script src="~/Scripts/jquery-3.5.1.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+
 </head>
 <body>
 
@@ -35,7 +43,7 @@
 
     <header role="navigation" class="top-nav row">
         <nav class="uk-flex-auto row flex-1">
-            <div id="loggedInUser">
+            <div id="loggedInUser" class="column">
                 @Html.Partial("_LoggedInUser")
             </div>
 
@@ -132,14 +140,15 @@
         </div>
     </div>
 
-
-
-
     <div id="Modal-Show" uk-modal>
         <div class="uk-modal-dialog uk-modal-body" id="Modal-Body">
 
         </div>
     </div>
+
+    <!-- Uncomment for PWA -->
+    @*<script src="~/app.js"></script>*@
+
     <script src="https://www.google.com/recaptcha/api.js?render=6LfeB-IZAAAAANpiuFCp-HURWmy1NGqmj-p4owkF&&hl=fa"></script>
 
     <script>
@@ -155,12 +164,6 @@
             });
         }
     </script>
-
-
-
-
-
-
 
     <script>
         function showLogin() {
@@ -199,6 +202,7 @@
             window.location.href = "/";
         }
     </script>
+
     <!--#endregion-->
     @RenderSection("Scripts", false)
 
