--- a/AminWeb/Areas/User/Views/Classes/Classes.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/Classes.cshtml
@@ -2,7 +2,7 @@
 <h3>
     کلاس ها
 </h3>
-<button type="button" onclick="createClasses()" class="btn-primary uk-margin-bottom uk-margin-auto-left">کلاس جدید</button>
+<button type="button" onclick="window.location.href='/User/Classes/Create'" class="btn-primary uk-margin-bottom uk-margin-auto-left">کلاس جدید</button>
 <div id="listClasses">
     @Html.Action("ListClasses")
 </div>
