--- a/AminWeb/Areas/User/Views/Classes/ListClasses.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/ListClasses.cshtml
@@ -15,12 +15,12 @@
                         uk-sortable="group:my; cls-custom: uk-box-shadow-small uk-background mat">
                         @foreach (var j in item.TblVideo)
                         {
-                            <li>
+                            <li class="video_@j.VideoId">
                                 <div class="row-reverse uk-padding-small">
                                     <span>@j.Title</span>
                                     <div class="row uk-margin-auto-right">
-                                        <a href="" uk-icon="trash"></a>
-                                        <a href="" uk-icon="edit"></a>
+                                        <a onclick="deleteVideo(@j.VideoId)" uk-icon="trash"></a>
+                                        <a href="/User/Video/Edit/@j.VideoId" uk-icon="edit" ></a>
                                     </div>
                                 </div>
                             </li>
