--- a/AminWeb/Areas/User/Views/Video/Edit.cshtml
+++ b/AminWeb/Areas/User/Views/Video/Edit.cshtml
@@ -1,14 +1,18 @@
 ﻿@model DataLayer.MetaData.MdVideo
 
 @{
-    ViewBag.Title = "اضافه کردن ویدیو ";
+    ViewBag.Title = "ویرایش کردن ویدیو";
     ViewBag.Content = "ویدیو هایی که شما آپلود کرده اید";
     Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
 <div class="mat uk-padding uk-box-shadow-small uk-margin-xlarge-bottom">
-    @using (Html.BeginForm("Create", "Video", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Edit", "Video", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
+        @Html.HiddenFor(m => m.id)
+        @Html.HiddenFor(m => m.MainImage)
+        @Html.HiddenFor(m => m.VideoDemoUrl)
+        @Html.HiddenFor(m => m.VideoUrl)
         <h3>
             آپلود ویدیو جدید
         </h3>
@@ -24,6 +28,12 @@
 
         <div class="form-group">
             <label for="MainImage">عکس</label>
+            <div class="row-reverse text-center">
+                @if (Model.MainImage != null)
+                {
+                    <img src="~/Resources/Video/Image/@Model.MainImage" alt="" />
+                }
+            </div>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
                 <span class="uk-text-middle">عکس خود را اینجا بیاندازید و یا</span>
@@ -38,6 +48,14 @@
         </div>
         <div class="form-group">
             <label for="VideoDemo">دموی ویدیو</label>
+            <div class="row-reverse text-center">
+                @if (Model.VideoDemoUrl !=null)
+                {
+                    <video class="video-playback" controls controlsList="nodownload">
+                        <source src="~/Resources/Video/VideoDemo/@Model.VideoDemoUrl" type="video/mp4">
+                    </video>
+                }
+            </div>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
                 <span class="uk-text-middle"> دموی ویدیو خود را اینجا بیاندازید و یا</span>
@@ -51,9 +69,16 @@
             </span>
         </div>
 
-
         <div class="form-group">
             <label for="Video">ویدیو</label>
+            <div class="row-reverse text-center">
+                @if (Model.VideoUrl != null)
+                {
+                    <video class="video-playback" controls controlsList="nodownload">
+                        <source src="~/Resources/Video/VideoUrl/@Model.VideoUrl" type="video/mp4">
+                    </video>
+                }
+            </div>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
                 <span class="uk-text-middle">ویدیو خود را اینجا بیاندازید و یا</span>
@@ -66,7 +91,7 @@
                 @Html.ValidationMessageFor(model => model.VideoUrl, "", new { @class = "uk-text-danger" })
             </span>
         </div>
-     
+
 
         <div class="form-group">
             <label for="Description">توضیحات</label>
@@ -98,7 +123,7 @@
         <div class="form-group">
             <label for="Playlist">کلاس</label>
             <div class="row-reverse">
-                @Html.DropDownListFor(model => model.PlaylistId, (IEnumerable<SelectListItem>)ViewBag.PlaylistId, "کلاس مورد نظر", htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left showPlaylist", dir = "rtl", onchange = "showPlaylist()" })
+                @Html.DropDownList("PlaylistId", null, htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left", dir = "rtl" })
                 <a href="/User/Classes/Create" uk-icon="plus" uk-tooltip="اضافه کردن کلاس جدید" class="uk-margin-auto-right"></a>
             </div>
             @Html.ValidationMessageFor(model => model.PlaylistId, "", new { @class = "uk-text-danger" })
@@ -114,7 +139,7 @@
         </div>
         <div class="row-reverse uk-margin-medium-top">
             <button class="btn-primary">
-                آپلود
+                ویرایش
             </button>
         </div>
 
